[tool.poetry]
name = "job_1"
version = "0.1.0"
description = ""
authors = ["josh-gree <joshuadouglasgreenhalgh@gmail.com>"]
packages = [{include = "job_1"}]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
